# vci

./: Cargo.toml  LICENSE.md  README.md  licenses.json
docs/: mac_x64_setup.md  ubuntu_server_setup.md  windows_setup.md
src/: cli.rs  job.rs  main.rs  ssh.rs  yaml.rs
