[package]
name = "vci"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
ring = "0.17.14"
russh = { version = "0.56", default-features = false, features = ["ring"] }
russh-sftp = "2.0"
tokio = { version = "1", features = ["rt", "net", "time", "io-util", "macros", "process", "sync", "signal"] }
anyhow = "1"
colored = "3"

[[bin]]
name = "vci"
path = "src/main.rs"